--- a/_config.yml
+++ b/_config.yml
@@ -8,4 +8,4 @@ repo_url: https://github.com/abhin4v/precis
 name: Precis
 
 # the description of the notes website
-description: Precis is a minimal note taking web-app built over Github Pages. This website itself is build using Precis. Look at the notes below to learn about it.
+description: Precis is a minimal note taking web-app built over Github Pages. This website itself is built using Precis. Look at the notes below to learn about it.
