--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # the base URL of your notes Github pages website
-base_url: https://abhin4v.github.io/precis
+base_url: https://uinelj.github.io/precis
 
 # the URL of your notes Github repo
-repo_url: https://github.com/abhin4v/precis
+repo_url: https://github.com/uinelj/precis
 
 # the name for your notes website
 name: Precis
