--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ base_url: https://uinelj.github.io/precis
 repo_url: https://github.com/uinelj/precis
 
 # the name for your notes website
-name: Precis
+name: uj
 
 # the description of the notes website
 description: Precis is a minimal note taking web-app built over Github Pages. This website itself is built using Precis. Look at the notes below to learn about it.
